# dprint-plugin-rustfmt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  bvm.json  dprint.json  rust-toolchain  rust-toolchain.toml  setup.sh
.github/workflows/: ci.yml  publish.yml
patches/: rustc_data_structures_cargo.patch  rustc_data_structures_stack.patch  rustfmt-nightly_lib.patch
scripts/: createPluginFile.ts  create_plugin_file.ts
src/: config.rs  configuration.rs  format.rs  lib.rs  main.rs  plugin_handler.rs  wasm_plugin.rs
