[package]
name = "dprint-plugin-rustfmt"
version = "0.6.2"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"

[[bin]]
name = "dprint-plugin-rustfmt"

[dependencies]
anyhow = "1.0.53"
dprint-core = { version = "0.56.0", features = ["process"] }
rustfmt-nightly = { git = "https://github.com/rust-lang/rustfmt", rev = "8b0b213cddb23a9bbe421b717d1a0e5fb3982712" }
serde = { version = "1.0.135", features = ["derive"] }
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
